--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "prepublish": "rollup -c && uglifyjs ./build/dbox.js -c -m -o ./build/dbox.min.js",
-    "dev": "rollup --config rollup.config.dev.js && uglifyjs ../d4pkg-develop/src/dbox/build/dbox.js -c -m -o ../d4pkg-develop/src/dbox//build/dbox.min.js"
+    "dev": "rollup --config rollup.config.dev.js && uglifyjs ../d4pkg-develop/src/dbox/build/dbox.js -c -m -o ../d4pkg-develop/src/dbox/build/dbox.min.js",
+    "pk": "rollup --config rollup.config.pk.js && uglifyjs ../../aws/pnud-pk-vppd/src/dbox/build/dbox.js -c -m -o ../../aws/pnud-pk-vppd/src/dbox/build/dbox.min.js",
+    "mt": "rollup --config rollup.config.mt.js && uglifyjs ../mt-sociodemograficos-olimpicos/src/dbox/build/dbox.js -c -m -o ../mt-sociodemograficos-olimpicos/src/dbox/build/dbox.min.js"
   },
   "devDependencies": {
     "rollup": "^0.26.3",
