--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "prepublish": "rollup -c && uglifyjs ./build/dbox.js -c -m -o ./build/dbox.min.js",
-    "dev": "rollup --config rollup.config.dev.js && uglifyjs ../d4pkg-develop/src/dbox/build/dbox.js -c -m -o ../d4pkg-develop/src/dbox/build/dbox.min.js",
+    "dev": "rollup --config rollup.config.dev.js",
     "pk": "rollup --config rollup.config.pk.js && uglifyjs ../pnud-pk-vppd/src/dbox/build/dbox.js -c -m -o ../pnud-pk-vppd/src/dbox/build/dbox.min.js",
     "mt": "rollup --config rollup.config.mt.js && uglifyjs ../mt-post-olimpicos/src/dbox/build/dbox.js -c -m -o ../mt-post-olimpicos/src/dbox/build/dbox.min.js",
     "pb": "rollup --config rollup.config.pb.js && uglifyjs ../frente-pobreza-mapa/src/dbox/build/dbox.js -c -m -o ../frente-pobreza-mapa/src/dbox/build/dbox.min.js",
