--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "prepublish": "rollup -c && uglifyjs ./build/dbox.js -c -m -o ./build/dbox.min.js",
-    "dev": "rollup --config rollup.config.dev.js",
+    "dev": "rollup --config rollup.config.dev.js"
   },
   "devDependencies": {
     "rollup": "^0.26.3",
