--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "dbox",
-  "version": "0.0.1",
+  "name": "dboxjs",
+  "version": "0.0.1-0.0.1",
   "description": "A library to create easy reusable charts",
   "scripts": {
     "prepublish": "rollup -c && uglifyjs ./build/dbox.js -c -m -o ./build/dbox.min.js",
     "dev": "rollup --config rollup.config.dev.js"
   },
-  "devDependencies": {
-    "rollup": "^0.26.3",
-    "rollup-plugin-node-resolve": "^1.5.0",
-    "uglify-js": "^2.6.2"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/dboxjs/dbox"
+    "url": "git+https://github.com/dboxjs/dbox.git"
   },
   "license": "MIT",
   "dependencies": {
@@ -23,5 +19,21 @@
     "d3-tip": "^0.7.1",
     "lodash": "^4.17.4",
     "topojson": "^2.2.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/dboxjs/dbox/issues"
+  },
+  "homepage": "https://github.com/dboxjs/dbox#readme",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "keywords": [
+    "d3",
+    "charts",
+    "dataviz",
+    "dbox",
+    "dboxjs"
+  ],
+  "author": ""
 }
