--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,11 @@
   "extends": "eslint:recommended",
   "env": {
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "browser": true
+  },
+  "rules": {
+    "no-console": "warn",
+    "no-unused-vars": "warn"
   }
 }
