--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "module": "dist/dbox.mjs",
   "jsnext:main": "dist/dbox.mjs",
   "scripts": {
-    "prebuild": "eslint lib test",
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
+    "eslint": "eslint -c .eslintrc lib test",
+    "build": "rollup -c && uglifyjs ./dist/dbox.js -c -m -o ./dist/dbox.min.js",
+    "dev": "rollup -c rollup.config.dev.js -w",
     "pretest": "npm run build",
     "test": "mocha",
     "prepublish": "npm test"
@@ -41,6 +41,7 @@
     "d3-queue": "^3.0.3",
     "d3-tip": "^0.7.1",
     "lodash": "^4.17.4",
+    "textures": "^1.0.4",
     "topojson": "^2.2.0"
   },
   "devDependencies": {
@@ -55,6 +56,8 @@
     "rollup": "^0.37.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-istanbul": "^1.1.0",
-    "rollup-watch": "^2.5.0"
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-watch": "^2.5.0",
+    "uglify-js": "^2.8.7"
   }
 }
