--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dboxjs",
-  "version": "0.0.1-0.1.0",
+  "version": "0.0.1-1.0.0",
   "description": "A library to create easy reusable charts",
   "main": "dist/dbox.js",
   "module": "dist/dbox.mjs",
@@ -59,5 +59,9 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-watch": "^2.5.0",
     "uglify-js": "^2.8.10"
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
   }
 }
