--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dboxjs",
-  "version": "0.0.1-1.0.1",
+  "version": "0.0.2",
   "description": "A library to create easy reusable charts",
   "main": "dist/dbox.js",
   "module": "dist/dbox.mjs",
