--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "topojson": "^2.2.0"
   },
   "devDependencies": {
+    "@dboxjs/dbox-radar": "0.0.1",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.24.1",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
     "eslint": "^3.12.2",
