--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@dboxjs/dbox-radar": "0.0.1",
+    "@dboxjs/dbox-scatter": "0.0.2",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.18.0",
