--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "topojson": "^2.2.0"
   },
   "devDependencies": {
+    "@dboxjs/heatmap": "0.0.1",
     "@dboxjs/dbox-radar": "0.0.1",
     "@dboxjs/dbox-scatter": "0.0.2",
     "@dboxjs/stacked-area": "0.0.1",
