--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@dboxjs/heatmap": "0.0.1",
+    "@dboxjs/treemap": "0.0.1",
     "@dboxjs/dbox-radar": "0.0.1",
     "@dboxjs/dbox-scatter": "0.0.2",
     "@dboxjs/stacked-area": "0.0.1",
