--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "topojson": "^2.2.0"
   },
   "devDependencies": {
-    "@dboxjs/dbox-radar": "0.0.1",
-    "@dboxjs/dbox-scatter": "0.0.2",
+    "@dboxjs/bars": "0.0.2",
     "@dboxjs/heatmap": "0.0.1",
-    "@dboxjs/stacked-area": "0.0.1",
+    "@dboxjs/radar": "0.0.2",
+    "@dboxjs/scatter": "0.0.3",
+    "@dboxjs/timeline": "0.0.1",
     "@dboxjs/treemap": "0.0.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
