refactor(.babelrc): add external-helpers

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
-  "presets":["env"],
-  "plugins": ["external-helpers"]
+  "presets": ["env"],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    },
+    "development": {
+      "plugins": ["external-helpers"]
+    },
+    "production": {
+      "plugins": ["external-helpers"]
+    }
+  }
 }
