--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,15 @@
-# editorconfig.org
+# EditorConfig is awesome: http://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
-indent_style = space
-indent_size = 2
 end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+indent_size = 2
+indent_style = space
+charset = utf-8
 
-[*.md]
-trim_trailing_whitespace = false
+[Makefile]
+indent_style = tab
