Fix babel presets

--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-  "presets": ["env"],
-  "env": {
-    "test": {
-      "plugins": ["istanbul"]
-    },
-    "development": {
-      "plugins": ["external-helpers"]
-    },
-    "production": {
-      "plugins": ["external-helpers"]
-    }
-  }
+  "presets": ["env"]
 }
