update dependencies and script

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@dboxjs/scatter": "0.x",
     "@dboxjs/timeline": "0.x",
     "@dboxjs/treemap": "0.x",
+    "babel": "^6.23.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.0",
@@ -61,10 +62,10 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-phantomjs": "^4.1.0",
-    "rollup": "^0.37.0",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup": "^0.37.2",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-istanbul": "^1.1.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-node-resolve": "^2.1.1",
     "rollup-watch": "^2.5.0",
     "uglify-js": "^2.8.10"
   },
