--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "cartodb": "^0.5.1",
     "d3": "^4.6.0",
     "d3-queue": "^3.0.3",
-    "d3-tip": "^0.7.1",
     "lodash": "^4.17.4",
+    "rollup": "^0.57.1",
     "textures": "^1.0.4",
     "topojson": "^2.2.0"
   },
@@ -58,13 +58,15 @@
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
+    "d3-tip": "^0.7.1",
     "eslint": "^3.12.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-phantomjs": "^4.1.0",
-    "rollup": "^0.37.2",
     "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-istanbul": "^1.1.0",
+    "rollup-plugin-legacy": "^1.0.0",
     "rollup-plugin-node-resolve": "^2.1.1",
     "rollup-watch": "^2.5.0",
     "uglify-js": "^2.8.10"
