Updates to Makefile import d3 Update to rollup

--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-phantomjs": "^4.1.0",
-    "rollup": "^0.37.2",
+    "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-node-resolve": "^2.1.1",
     "rollup-watch": "^2.5.0",
