--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,3 @@
 {
-  "env": {
-      "browser": true,
-      "commonjs": true,
-      "es6": true,
-      "node": true
-  },
-  "globals": {
-    "ENV": true
-  },
-  "extends": "eslint:recommended",
-  "parserOptions": {
-      "sourceType": "module"
-  },
-  "rules": {
-      "indent": [
-          "error",
-          2
-      ],
-      "linebreak-style": [
-          "error",
-          "unix"
-      ],
-      "quotes": [
-          "error",
-          "single"
-      ],
-      "semi": [
-          "error",
-          "always"
-      ]
-  }
+  "extends": "airbnb-base"
 }
