--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "cartodb": "^0.5.1",
     "d3": "^4.6.0",
     "d3-queue": "^3.0.3",
+    
     "lodash": "^4.17.4",
-    "rollup": "^0.57.1",
     "textures": "^1.0.4",
-    "topojson": "^2.2.0"
+    "topojson": "^2.2.0",
+    "d3-tip": "^0.7.1"
   },
   "devDependencies": {
     "@dboxjs/bars": "0.x",
@@ -55,17 +56,20 @@
     "babel": "^6.23.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
-    "d3-tip": "^0.7.1",
-    "eslint": "^3.12.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "mocha-phantomjs": "^4.1.0",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-legacy": "^1.0.0",
     "rollup-plugin-node-resolve": "^2.1.1",
