Babel update, WIP layer-scaffold

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "rollup -c && uglifyjs ./dist/dbox.js -c -m -o ./dist/dbox.min.js",
     "dev": "rollup -c rollup.config.dev.js -w",
     "pretest": "npm run build",
-    "test": "mocha",
+    "test": "",
     "prepublish": "npm test"
   },
   "repository": {
@@ -39,13 +39,16 @@
     "cartodb": "^0.5.1",
     "d3": "^4.6.0",
     "d3-queue": "^3.0.3",
-    
     "lodash": "^4.17.4",
     "textures": "^1.0.4",
     "topojson": "^2.2.0",
     "d3-tip": "^0.7.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@dboxjs/bars": "0.x",
     "@dboxjs/heatmap": "0.x",
     "@dboxjs/map": "0.0.x",
@@ -53,21 +56,14 @@
     "@dboxjs/scatter": "0.x",
     "@dboxjs/timeline": "0.x",
     "@dboxjs/treemap": "0.x",
-    "babel": "^6.23.0",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-register": "^6.18.0",
-    "babelrc-rollup": "^3.0.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.7.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "istanbul": "^0.4.5",
     "rollup": "^0.57.1",
-    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-istanbul": "^1.1.0",
