replace quotes and eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,13 @@
       "semi": [
           "error",
           "always"
+      ],
+      "one-line": [
+        true,
+        "check-open-brace",
+        "check-catch",
+        "check-else",
+        "check-whitespace"
       ]
   }
 }
