--- a/package.json
+++ b/package.json
@@ -40,6 +40,16 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@dboxjs/bars": "^0.x",
+    "@dboxjs/distro": "^0.x",
+    "@dboxjs/heatmap": "^0.x",
+    "@dboxjs/leaflet": "^0.x",
+    "@dboxjs/map": "^0.x",
+    "@dboxjs/radar": "^0.x",
+    "@dboxjs/scatter": "^0.x",
+    "@dboxjs/spineplot": "^0.x",
+    "@dboxjs/timeline": "^0.x",
+    "@dboxjs/treemap": "^0.x",
     "d3": "^4.13.0",
     "d3-queue": "^3.0.7",
     "d3-tip": "^0.9.1",
@@ -48,20 +58,12 @@
     "topojson": "^2.2.0"
   },
   "devDependencies": {
-    "@dboxjs/bars": "0.x",
-    "@dboxjs/heatmap": "0.x",
-    "@dboxjs/map": "0.0.x",
-    "@dboxjs/radar": "0.x",
-    "@dboxjs/scatter": "0.x",
-    "@dboxjs/timeline": "0.x",
-    "@dboxjs/treemap": "0.x",
     "babel": "^6.23.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
-    "d3-dispatch": "^1.0.5",
     "eslint": "^4.18.2",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.6.3",
