--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@dboxjs/core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A library to create easy reusable charts",
   "main": "dist/dbox.js",
-  "module": "dist/dbox.min.js",
-  "jsnext:main": "dist/dbox.min.js",
+  "module": "dist/dbox.mjs",
+  "jsnext:main": "dist/dbox.mjs",
   "scripts": {
     "eslint": "eslint -c .eslintrc lib test",
     "build": "rollup -c && uglifyjs ./dist/dbox.js -c -m -o ./dist/dbox.min.js",
