--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@dboxjs/core",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A library to create easy reusable charts",
   "main": "dist/dbox.js",
   "module": "dist/dbox.mjs",
   "jsnext:main": "dist/dbox.mjs",
   "scripts": {
     "eslint": "eslint -c .eslintrc lib test",
-    "build": "rollup -c && uglifyjs ./dist/dbox.js -c -m -o ./dist/dbox.min.js",
+    "build": "rollup -c rollup.config.js; uglifyjs ./dist/dbox.js -c -m -o ./dist/dbox.min.js",
     "dev": "rollup -c rollup.config.dev.js -w",
     "pretest": "npm run build",
     "test": "mocha",
