fix: Update charts versions

--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
     "topojson": "^2.2.0"
   },
   "devDependencies": {
-    "@dboxjs/bars": "^0.x",
-    "@dboxjs/distro": "^0.x",
-    "@dboxjs/heatmap": "^0.x",
-    "@dboxjs/leaflet": "^0.x",
-    "@dboxjs/map": "^0.x",
-    "@dboxjs/radar": "^0.x",
-    "@dboxjs/scatter": "^0.x",
-    "@dboxjs/spineplot": "^0.x",
-    "@dboxjs/timeline": "^0.x",
-    "@dboxjs/treemap": "^0.x",
+    "@dboxjs/bars": "0",
+    "@dboxjs/distro": "0",
+    "@dboxjs/heatmap": "0",
+    "@dboxjs/leaflet": "0",
+    "@dboxjs/map": "0",
+    "@dboxjs/radar": "0",
+    "@dboxjs/scatter": "0",
+    "@dboxjs/spineplot": "0",
+    "@dboxjs/timeline": "0",
+    "@dboxjs/treemap": "0",
     "babel": "^6.23.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
