--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "d3": "^4.13.0",
     "d3-queue": "^3.0.7",
     "d3-tip": "^0.9.1",
+    "leaflet": "^1.3.1",
     "lodash": "^4.17.15",
     "textures": "^1.0.4",
     "topojson": "^2.2.0"
