--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dboxjs/core",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "A library to create easy reusable charts",
   "main": "dist/dbox.js",
   "module": "dist/dbox.mjs",
@@ -10,9 +10,7 @@
     "build": "rollup -c rollup.config.js; uglifyjs ./dist/dbox.js -c -m -o ./dist/dbox.min.js",
     "dev": "rollup -c rollup.config.dev.js -w",
     "pretest": "npm run build",
-    "test": "mocha",
-    "docs": "jsdoc -c jsdocs.config.json",
-    "prepublish": "npm test"
+    "docs": "jsdoc -c jsdocs.config.json"
   },
   "repository": {
     "type": "git",
